--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "bootstrap": "^4.4.1",
+        "bootstrap-vue": "^2.1.0",
         "core-js": "^3.4.4",
         "leaflet": "^1.6.0",
         "leaflet-control-geocoder": "^1.10.0",
